2016-09-28  Andrew Burgess  <andrew.burgess@embecosm.com>

	* config/arc/arc.h (ASM_SPEC): Use arc700 as the assembler cpu
	when assembling nps400 code.
	* config/arc/arc.c (arc_init): Use ARC700 as the cpu string
	embeded into the assembler file for nps400 code.

2016-09-27  Joern Rennecke  <joern.rennecke@embecosm.com>
            Andrew Burgess  <andrew.burgess@embecosm.com>

        * config/arc/arc.h (STRICT_ALIGNMENT): Make use of
	unaligned_access config variable.
        * config/arc/arc.c (arc_expand_movmem): Take STRICT_ALIGNMENT into
	account.

2013-08-08  Joern Rennecke  <joern.rennecke@embecosm.com>

	* builtins.c (fold_builtin_constant_p): Consider addresses for
	global/static variables as constant when they are bound locally.

2016-06-16  Claudiu Zissulescu  <claziss@synopsys.com>
	    Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/arc/arc.c (arc_print_operand_address): Handle pc-relative
	addresses.
	(arc_needs_pcl_p): Add GOTOFFPC.
	(arc_legitimate_pic_addr_p): Likewise.
	(arc_output_pic_addr_const): Likewise.
	(arc_legitimize_pic_address): Generate a pc-relative address using
	GOTOFFPC.
	(arc_output_libcall): Use @pcl syntax.
	(arc_delegitimize_address_0): Delegitimize ARC_UNSPEC_GOTOFFPC.
	* config/arc/arc.md ("unspec"): Add ARC_UNSPEC_GOTOFFPC.
	(*movsi_insn): Use @pcl syntax.
	(doloop_begin_i): Likewise.

2016-06-16  Claudiu Zissulescu  <claziss@synopsys.com>

	* config/arc/arc.opt (mtp-regno): Update text.

2016-05-02  Claudiu Zissulescu  <claziss@synopsys.com>

	* config/arc/arc.md (mulsidi3): Change operand 0 predicate to
	register_operand.
	(umulsidi3): Likewise.
	(indirect_jump): Fix jump instruction assembly patterns.

2016-05-02  Claudiu Zissulescu  <claziss@synopsys.com>

	* config/arc/arc.c (arc_preferred_simd_mode): Remove enum keyword.
	(arc_save_restore): Likewise.
	(arc_dwarf_register_span): Likewise.
	(arc_output_pic_addr_const): Initialize suffix variable.

2016-05-02  Claudiu Zissulescu  <claziss@synopsys.com>
