@@ -998,8 +998,8 @@ arc*-*-elf*)
 	tm_file="dbxelf.h elfos.h newlib-stdint.h ${tm_file}"
 	tmake_file="arc/t-arc-newlib arc/t-arc"
 	case x"${with_cpu}" in
-	  xarc600|xarc601|xarc700)
-		target_cpu_default="TARGET_CPU_$with_cpu"
+	  xarc600|xarc601|xarc700|xnps400)
+                tm_defines="${tm_defines} TARGET_CPU_${with_cpu}=1"
 		;;
 	esac
 	if test x${with_endian} = x; then
@@ -1023,8 +1023,8 @@ arc*-*-linux-uclibc*)
 	tm_defines="${tm_defines} TARGET_SDATA_DEFAULT=0"
 	tm_defines="${tm_defines} TARGET_MMEDIUM_CALLS_DEFAULT=1"
 	case x"${with_cpu}" in
-	  xarc600|xarc601|xarc700)
-		target_cpu_default="TARGET_CPU_$with_cpu"
+	  xarc600|xarc601|xarc700|xnps400)
+                tm_defines="${tm_defines} TARGET_CPU_${with_cpu}=1"
 		;;
 	esac
 	if test x${with_endian} = x; then
@@ -3683,7 +3683,8 @@ case "${target}" in
 	arc*-*-*) # was:	arc*-*-linux-uclibc)
 		supported_defaults="cpu"
 		case $with_cpu in
-		  arc600|arc601|arc700)
+		  arc600|arc601|arc700|nps400)
+                        tm_defines="${tm_defines} TARGET_CPU_${with_cpu}=1"
 			;;
 		  *) echo "Unknown cpu type"
 			exit 1
